# alexandria-hermes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  health_drain.md  install.md
backend/: .dockerignore  AGENTS.md  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/.agents/: MANIFEST.json
backend/app/: __init__.py  cli.py  container.py  main.py
backend/app/archive/: containers.py
backend/app/cli/: __init__.py  librarian_command_context.py  librarian_gateway.py  librarian_readiness_commands.py  librarian_review_commands.py  librarian_workflow_commands.py  main.py  mcp_server_commands.py  output.py
backend/app/cli_support/: backend_api_client.py  environment.py  obsidian_plugin_install.py  runtime.py  typer_entry.py  url_paths.py
backend/app/connections/: containers.py
backend/app/librarian/: containers.py
backend/app/mcp_server/: __init__.py  backend_api_client.py  backend_tool_gateway.py  http_auth_factory.py  http_auth_gate.py  http_mount.py  mcp_protocol_enums.py  oauth_bearer_verifier.py  protected_resource_metadata.py  server_runtime.py
backend/app/memory/: containers.py
backend/app/obsidian/: containers.py
backend/app/platform/: health_router.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 202605121240_initial_uuid_archive.py  202605141904_add_context_vault.py  202605150930_remove_default_minio_smoke_provider.py  202605151438_allow_prompt_library_item_type.py  202605161020_add_librarian_agent_profile_fields.py  202605161930_add_memory_scope_and_quality_statuses.py  202605161945_add_librarian_profile_routing_fields.py  202605162010_add_context_chunk_embeddings.py  202605171845_add_memory_compacts.py  202605172010_add_context_access_events.py  202605181430_remove_workflow_library_item_type.py  202605181650_add_harness_context_kind.py  202605181720_create_skill_acquisition_jobs.py  202605191840_remove_minio_providers.py  202605192115_remove_knowledge_library_item_type.py  202605201020_normalize_legacy_sqlite_datetimes.py  202605201030_reject_legacy_provider_secret_storage.py  202605251030_drop_library_crud_and_harness_kind.py  202605251130_drop_memory_compact_sqlite_storage.py  202605251420_add_obsidian_index_cache.py  202605261030_add_obsidian_graph_and_workflows.py  202605281230_add_obsidian_chunk_embeddings.py  202606020050_add_embedding_fingerprints.py  202606021130_add_skill_acquisition_handoff_fields.py  202606021145_add_skill_acquisition_search_audit_fields.py
backend/tests/: conftest.py  readme.md
backend/tests/cli/: test_authoring_pruning_commands.py  test_codex_mcp_install.py  test_collaboration_payload_helpers.py  test_console_entrypoint_import.py  test_daemon_commands.py  test_daemon_service_files.py  test_harness_cli.py  test_hermes_awareness_assets.py  test_hermes_cli.py  test_minio_pruning_commands.py  test_obsidian_cli.py  test_obsidian_install_local.py  test_runtime_serve_command.py  test_setup_guidebook.py  test_setup_runtime_mode.py
backend/tests/connections/: test_librarian_provider_clients.py  test_openai_codex_oauth_adapter.py  test_openai_delegate_executor.py  test_provider_connection_scope.py
backend/tests/mcp/: test_cli_payload_contracts.py  test_librarian_compact_refresh.py  test_mcp_cli.py  test_mcp_makefile.py  test_mcp_oauth_auth.py  test_mcp_server.py
(+687 files in other folders)
