[project]
name = "omx-remote"
version = "0.1.0"
description = "FastAPI backend service for alexandria-hermes"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi[all]",
    "dependency-injector",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "aiosqlite",
    "greenlet",
]

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["app", "tests"]
extend-exclude = [
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    ".next",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "PERF", "N", "RUF"]
ignore = [
    "E501",
    "B008",
    "SIM108",
]
exclude = [
    "**/tests/**",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
python-version = "3.13"
project-includes = ["app"]
project-excludes = [
    "**/tests/**",
    "**/__pycache__",
    "**/.venv/**",
    "**/venv/**",
    "**/.mypy_cache/**",
    "**/.ruff_cache/**",
    "**/build/**",
    "**/dist/**",
    "**/.pytest_cache/**",
    "**/.git/**",
]
search-path = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
norecursedirs = [".venv", ".pytest_cache", ".ruff_cache", "node_modules"]
