[project]
name = "alexandria-hermes"
version = "0.1.0"
description = "FastAPI backend service for alexandria-hermes"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi[all]",
    "dependency-injector",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "aiosqlite",
    "greenlet",
    "alembic>=1.18.4",
    "openai>=2.37.0",
    "cryptography>=48.0.0",
    "fastembed>=0.8.0",
    "sqlite-vec>=0.1.9",
    "mcp>=1.23.0",
    "typer>=0.25.1",
    "httpx>=0.28.1,<1.0.0",
    "asyncer>=0.0.17",
    "orjson>=3.11.9",
    "langgraph>=1.0.0,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.1.0,<4.0.0",
]

[project.scripts]
alexandria-hermes = "app.cli:main"
alex-hermes = "app.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["app", "tests"]
extend-exclude = [
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    ".next",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "PERF", "N", "RUF"]
ignore = [
    "E501",
    "B008",
    "SIM108",
]
exclude = [
    "**/tests/**",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
python-version = "3.13"
project-includes = ["app"]
project-excludes = [
    "**/tests/**",
    "**/__pycache__",
    "**/.venv/**",
    "**/venv/**",
    "**/.mypy_cache/**",
    "**/.ruff_cache/**",
    "**/build/**",
    "**/dist/**",
    "**/.pytest_cache/**",
    "**/.git/**",
]
search-path = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
norecursedirs = [".venv", ".pytest_cache", ".ruff_cache", "node_modules"]
